// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render ComboBox component 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="bg-white rounded-md mt-10 text-center min-w-[300px] relative"
      >
        <div
          class="text-white  p-1 bg-blue-400 rounded-t"
        >
          Combo Box Title
        </div>
        <div
          class="flex flex-col md:flex-row justify-evenly p-5"
        >
          <div
            class="m-3"
          >
            <img
              class="inline w-[100px] h-[100px] border border-gray-600 rounded-full p-2"
              src="image-1.jpg"
            />
            <div
              class="mt-2 text-gray-500"
            >
              Product Title
               (
              5
              £)
            </div>
          </div>
        </div>
        <p
          class="text-xl"
        >
          Total: 
          5
          £
        </p>
        <button
          class="bg-blue-500 hover:bg-blue-700 text-white rounded-full m-3 visible"
          role="button"
        >
          Add To Cart
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="bg-white rounded-md mt-10 text-center min-w-[300px] relative"
    >
      <div
        class="text-white  p-1 bg-blue-400 rounded-t"
      >
        Combo Box Title
      </div>
      <div
        class="flex flex-col md:flex-row justify-evenly p-5"
      >
        <div
          class="m-3"
        >
          <img
            class="inline w-[100px] h-[100px] border border-gray-600 rounded-full p-2"
            src="image-1.jpg"
          />
          <div
            class="mt-2 text-gray-500"
          >
            Product Title
             (
            5
            £)
          </div>
        </div>
      </div>
      <p
        class="text-xl"
      >
        Total: 
        5
        £
      </p>
      <button
        class="bg-blue-500 hover:bg-blue-700 text-white rounded-full m-3 visible"
        role="button"
      >
        Add To Cart
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should render ComboBox component with added items to shopping cart 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="bg-white rounded-md mt-10 text-center min-w-[300px] relative"
      >
        <div
          class="text-white  p-1 bg-blue-400 rounded-t"
        >
          Combo Box Title
        </div>
        <div
          class="flex flex-col md:flex-row justify-evenly p-5"
        >
          <div
            class="m-3"
          >
            <img
              class="inline w-[100px] h-[100px] border border-gray-600 rounded-full p-2"
              src="image-1.jpg"
            />
            <div
              class="mt-2 text-gray-500"
            >
              Product Title
               (
              5
              £)
            </div>
          </div>
        </div>
        <p
          class="text-xl"
        >
          Total: 
          5
          £
        </p>
        <button
          class="bg-blue-500 hover:bg-blue-700 text-white rounded-full m-3 invisible"
          role="button"
        >
          Add To Cart
        </button>
        <div
          class="bg-green-600 text-white rounded-full p-3 absolute bottom-3 left-[20%] md:left-[32%] xl:left-[38%] text-center"
        >
          Succesfully added
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="bg-white rounded-md mt-10 text-center min-w-[300px] relative"
    >
      <div
        class="text-white  p-1 bg-blue-400 rounded-t"
      >
        Combo Box Title
      </div>
      <div
        class="flex flex-col md:flex-row justify-evenly p-5"
      >
        <div
          class="m-3"
        >
          <img
            class="inline w-[100px] h-[100px] border border-gray-600 rounded-full p-2"
            src="image-1.jpg"
          />
          <div
            class="mt-2 text-gray-500"
          >
            Product Title
             (
            5
            £)
          </div>
        </div>
      </div>
      <p
        class="text-xl"
      >
        Total: 
        5
        £
      </p>
      <button
        class="bg-blue-500 hover:bg-blue-700 text-white rounded-full m-3 invisible"
        role="button"
      >
        Add To Cart
      </button>
      <div
        class="bg-green-600 text-white rounded-full p-3 absolute bottom-3 left-[20%] md:left-[32%] xl:left-[38%] text-center"
      >
        Succesfully added
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
